Update FruitRegistry.java